update to shorten the display labels to prevent some wrapping

--- a/css/forms.css
+++ b/css/forms.css
@@ -95,5 +95,5 @@ input[type=checkbox].form-input {
 .combobox-options {
     top: 13px;
     left: -245px;
-    width: 375px;
+    width: 325px;
 }
